js sort/filter bugs squashed, read more added, fixed lots of css & decided to keep header mobile
yeyeye that's the one, .44 in the four-door skrrrraaa.

--- a/style/aanmelden.css
+++ b/style/aanmelden.css
@@ -2,6 +2,7 @@ body {
 	overflow: hidden;
 	width: 100vw;
 	height: 100vh;
+	padding: 2rem;
 }
 
 fieldset {
@@ -16,6 +17,7 @@ label {
 	display: block;
 }
 
-label+label {
+label+label,
+button {
 	margin-top: .25rem;
 }
