--- a/style/index.css
+++ b/style/index.css
@@ -1,8 +1,3 @@
-body {
-	display: grid;
-	grid-template-rows: 8.3vh auto;
-}
-
 header {
 	position: fixed;
 	width: 100vw;
@@ -13,16 +8,68 @@ header * {
 	vertical-align: middle;
 }
 
+header h1,
+header form ul {
+	display: none;
+}
+
+aside button {
+	background: url("../Images/icon_filter.png") no-repeat center center;
+	background-size: 3rem;
+}
+
+header>form>button {
+	background: url("../Images/icon_sort.png") no-repeat center center;
+	background-size: 3rem;
+}
+
+header button {
+	width: 3rem;
+	color: transparent;
+	box-shadow: none;
+}
+
+header button:hover,
+header button:focus {
+	box-shadow: none;
+}
+
 main {
 	display: flex;
 	flex-wrap: wrap;
-	grid-row: 2 / 3;
 }
 
 main article {
-	width: 50%;
-	height: 50%;
+	width: 33%;
 	overflow: hidden;
+	box-shadow: 0 0.125rem 0 0 rgba(7,7,33,.15);
+	background-color: white;
+	padding: .5rem;
+	cursor: pointer;
+}
+
+main article a {
+	color: var(--ns-linkBlue);
+	transition: all .1s ease-out;
+	display: inline-block;
+	margin-top: .25rem;
+}
+
+main article:hover a,
+main article a:focus {
+	color: var(--ns-blue);
+}
+
+main article a::before {
+	content: ">";
+	margin-right: .5rem;
+	transition: all .1s ease-out;
+}
+
+main article:hover a::before,
+main article a:focus::before{
+	margin: 0 .25rem;
+	color: var(--ns-blue);
 }
 
 h3 {
@@ -73,9 +120,7 @@ form li>button {
 	box-shadow: none;
 	background: none;
 	color: var(--ns-blue);
-	transition: box-shadow .1s ease-in-out;
 	width: 2rem;
-	transition: all .3s ease-out;
 	border-radius: 50%;
 }
 
@@ -86,24 +131,7 @@ form li>button:hover {
 }
 
 @media (max-width: 30rem) {
-	header h1,
-	header form ul {
-		display: none;
-	}
-	
-	aside button {
-		background: url("../Images/icon_filter.png") no-repeat center center;
-		background-size: 3rem;
-	}
-	
-	header>form>button {
-		background: url("../Images/icon_sort.png") no-repeat center center;
-		background-size: 3rem;
-	}
-	
-	header button {
-		width: 3rem;
-		color: transparent;
-		box-shadow: none;
+	main article {
+		width: 100%;
 	}
 }
